--- a/package.json
+++ b/package.json
@@ -3,29 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^6.2.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^12.20.13",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
-    "chart.js": "^3.2.1",
-    "install": "^0.13.0",
-    "npm": "^7.14.0",
+    "chart.js": "^3.3.0",
+    "chartkick": "^4.0.4",
     "pigeon-maps": "^0.19.5",
     "react": "^17.0.2",
-    "react-chartkick": "^0.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-three-fiber": "^6.0.13",
+    "react-scripts": "^4.0.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
-    "typescript": "^4.2.4",
-    "web-vitals": "^1.1.2"
+    "three": "^0.128.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^4.2.4"
   }
 }
