--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "chart.js": "^3.3.0",
-    "chartkick": "^4.0.4",
     "pigeon-maps": "^0.19.5",
     "react": "^17.0.2",
+    "react-chartkick": "^0.5.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^17.0.6",
+    "@types/three": "^0.128.0",
     "typescript": "^4.2.4"
   }
 }
